[project]
name = "isaaclab-reward-autotuning"
version = "0.1.0"
description = "Reward autotuning framework for Isaac Lab"
dependencies = [
    "torch",
    "numpy",
    "gymnasium",
    "zarr",
    "wandb",
    "click",
    "toml"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "lab*"]
